# text2sql

./: .env  .env.example  .gitignore  .langchain_cache.db  DEVELOPMENT_HISTORY.md  README.md  checkpoints.db  checkpoints.db-shm  checkpoints.db-wal  main.py  memory_cards.db  pyproject.toml  requirements.txt  security_audit.jsonl  test.db  test_complex_skill.py  test_simple_skill.py  verify_config.py
agent/: __init__.py  cli.py  column_index.py  config.py  constraint_guard.py  dashscope_adapter.py  database.py  graph.py  graph_builder.py  logging_config.py  memory.py  old_nodes.py  prompt_guard.py  query_cache.py  retrieval.py  schema_graph.py  security.py  session_plan.py  skill_graph_builder.py  sql_confirm.py  sql_correction.py  sql_errors.py  sql_execution_pipeline.py  sql_performance.py  sql_step_emitter.py  tools.py  types.py
logs/: security_audit.jsonl
report/: analysis_20260410_145335.md  analysis_20260412_151254.md  analysis_20260423_162905.md  analysis_20260423_172733.md  analysis_20260509_152310.md  analysis_20260509_155557.md  benchmark_dual_tower_20260421_224229.md  benchmark_dual_tower_20260423_153607.md  benchmark_dual_tower_20260423_153703.md  benchmark_dual_tower_20260423_153745.md  benchmark_dual_tower_20260423_154204.md  benchmark_dual_tower_20260517_155449.md  export_5f23c4954490.xlsx  export_5f23c4954490_step1.csv  export_5f23c4954490_step2.csv  export_5f23c4954490_step3.csv  export_5f23c4954490_step4.csv  export_8c5b4d7c0c56.xlsx  export_8c5b4d7c0c56_step2.csv  export_8c5b4d7c0c56_step3.csv  export_8c5b4d7c0c56_step4.csv  export_a1b313c0dd0f.xlsx  (+15 more)
(+169 files in other folders)
