[project]
name = "text2sql"
version = "0.1.0"
description = "Text-to-SQL LangGraph agent with skill-based architecture (Simple/Complex/DataAnalysis), dual-tower retrieval, streaming output, and LLM response caching"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dashscope>=1.25.15",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.26",
    "langgraph>=1.1.6",
    "matplotlib>=3.9.0",
    "networkx>=3.4",
    "pymilvus>=2.4",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=3.0",
    "openpyxl>=3.1",
    "sqlalchemy>=2.0.49",
    "sqlglot>=30.4.2",
    "torch>=2.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
